@@ -17,7 +17,8 @@ export(bct,char2seed,chisq.detail,ci.examp,clipplot,clt.examp,cnvrt.coords,
        subplot,TkListView,HWidentify,HTKidentify,
        tkBrush,tree.demo,triplot,vis.binom,vis.boxcox,vis.boxcoxu,
        vis.boxcox.old, vis.boxcoxu.old, sigma.test,
-       vis.gamma,vis.normal,vis.t,z.test,zoomplot,tkexamp,col2grey,col2gray,
+       vis.gamma,vis.normal,vis.t,z.test,zoomplot,oldzoomplot,
+       tkexamp,col2grey,col2gray,
        TkApprox,TkSpline,txtStart,txtStop,txtComment,txtSkip,etxtStart,
        etxtStop,etxtComment,etxtSkip,etxtPlot,wdtxtStart,wdtxtStop,
        wdtxtComment,wdtxtSkip,wdtxtPlot,mdtxtStart,mdtxtStop,mdtxtComment,
