@@ -1,6 +1,8 @@
 New in TeachingDemos version 2.10
 
-* Fixed subplot function to work better in multi frame plots with type='fig'. 
+* Fixed zoomplot to work with R 3.0
+
+* Fixed subplot function to work better in multi frame plots with type='fig'.
 
 * Fixed minor (and potentially major) bugs in TkListView
 
